<resources>
    <string name="app_name">GpsMain</string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="address">ADDRESS</string>
    <string name="contact">CONTACT</string>
    <string name="adhar">AADHAR NUMBER</string>
    <string name="new_user">New user?</string>
    <string name="sign_in_with">Or Signin with</string>
    <string name="full_name">FULL NAME</string>
    <string name="already_reg">Already registered?</string>
    <string name="Forgot">FORGOT?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="upload">UPLOAD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_rate">Rate us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>History</item>
        <item>Rate Us</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="emaill">username@gmail.com</string>
    <string name="user">User name</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="Address">Address</string>
    <string name="Aadhar">Aadhar No</string>

    </resources>


